<resources>
    <string name="app_name">2048</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_test">test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="undo">undo</string>
    <string name="restart">restart</string>
    <string name="title2048">2048</string>
    <string name="explication1">Join the numbers and get to the</string>
    <string name="explication2">2048 tile!</string>

    <string name="play"> Commencer le jeu </string>
    <string name="best_score"> Meilleurs scores </string>

    <string name="score_title">Yours bests scores !!!</string>

</resources>
