<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_grille"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"

    android:background="@color/bkColor"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="fr.univ_orleans.a2048.fragments.JeuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginBottom="0.05in">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/title2048"
            android:textSize="45sp"
            android:background="@drawable/border_button_title"
            tools:ignore="NestedWeights"
            android:layout_margin="0.025in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:contextClickable="false"
                android:text=""
                android:background="@drawable/border_square_button_0"
                android:layout_margin="0.025in"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1" />-->

            <Button
                android:id="@+id/button_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/undo"
                android:background="@drawable/border_button_title"
                android:layout_margin="0.025in"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_best_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:contextClickable="false"
                android:background="@drawable/border_square_button_0"
                android:layout_margin="0.025in"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1" />-->

            <Button
                android:id="@+id/button_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/restart"
                android:background="@drawable/border_button_title"
                android:layout_margin="0.025in"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/explication1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/explication2"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <fr.univ_orleans.a2048.layouts.SquareLayout
        android:id="@+id/grille"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@drawable/border_square_layout"
        android:orientation="vertical" />

</LinearLayout>
